--- a/Trello_quora/quora-api/pom.xml
+++ b/Trello_quora/quora-api/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>quora-api</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.upgrad.quora</groupId>
+            <artifactId>quora-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -38,15 +45,11 @@
         </dependency>
 
         <dependency>
-            <groupId>com.upgrad.quora</groupId>
-            <artifactId>quora-service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 
